Fix Score column overlap and add all Week 1 game matchups

--- a/src/Components/Leaderboard.css
+++ b/src/Components/Leaderboard.css
@@ -66,6 +66,7 @@ th {
   z-index: 10;
   min-width: 50px;
   max-width: 50px;
+  text-align: center;
 }
 
 .name-column {
